package step4_lambda;

/**
 * Created by ethan.kim on 2018. 3. 3..
 */
public interface Strategy {

    void performTask();
}
