@startuml

title __STEP4_LAMBDA's Class Diagram__\n

  package step4_lambda {
    class ActiveStrategy {
        + performTask()
    }
  }
  

  package step4_lambda {
    class LazyStrategy {
        + performTask()
    }
  }
  

  package step4_lambda {
    class Main {
        {static} + main()
    }
  }
  

  package step4_lambda {
    interface Strategy {
        {abstract} + performTask()
    }
  }
  

  ActiveStrategy -up-|> Strategy
  LazyStrategy -up-|> Strategy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
